# pichat

./: CMakeLists.txt
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
common/: ByteArray.h  CmakeLists.txt  Credentials.cpp  Credentials.h  ICredentials.h  IReader.h  ISerializer.h  IWriter.h  Messages.h  PipeReader.cpp  PipeReader.h  PipeWriter.cpp  PipeWriter.h  Serializer.cpp  Serializer.h
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
